--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1471,107 +1471,107 @@ stories:
   domain: http://www.sonorannews.com/
   link: http://sonorannews.com/2019/12/27/art-show-at-desert-foothills-library/
 images:
-- name: mediterranean-mediterranean-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-purple-pond.jpg
-- name: nazi-invasion-capital-records-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-capital-records-building.jpg
-- name: nazi-invasion-stairs-down-blue-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-stairs-down-blue-green.jpg
-- name: old-church-oldchurch-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-monet-one.jpg
-- name: adam-smith-adam-smith-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-electricity.jpg
-- name: old-church-oldchurch-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-diego-rivera1.jpg
-- name: blossombar-blue-brush-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-brush-file-00-00-24-99.jpg
-- name: abe-lincoln-one-sand-paper-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sand-paper-file-00-00-15-87.jpg
-- name: oldhousecars-house-old-cars-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dark-rain.jpg
-- name: abe-lincoln-one-yellow-paper-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-paper-file-00-00-07-91.jpg
-- name: miamibeach-miamibeach-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-oily-mcoilface.jpg
-- name: old-house-oldhouse-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-yellow-collage.jpg
-- name: abandonedbuildings_oily_mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_oily_mcoilface.jpg
-- name: paris-paris-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-sand-paper.jpg
-- name: old-granary-field-granaryfield-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-green-zuma.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-post-modern.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-post-modern.JPG
-- name: gears-4882162452-fa3126b38d-b-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-rainbow-festival.jpg
-- name: gears-4882162452-fa3126b38d-b-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-alberto-giacometti.jpg
-- name: crow_cinnamon_rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_cinnamon_rolls.jpg
-- name: aws-s3-stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
-- name: adam-smith-adam-smith-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kandinsky-bv.jpg
-- name: lincoln-memorial-lincolnmemorial-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purp-paper.jpg
-- name: yuma-bank-yuma-bak-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-atari-asteroids.jpg
-- name: white-house-whitehouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-ww2-dresden.jpg
-- name: old-granary-field-oldhouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-diego-rivera1.jpg
-- name: liberty-back-statue-liberty-back-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-sunday.jpg
-- name: stories-catacombs-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-catacombs-blue-circuit-3.jpg
-- name: stalin-time-white-house-lawn-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-white-house-lawn-view.jpg
-- name: supreme-court-supremecourt-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-brush.jpg
-- name: cargo-ship-cargo-ship-on-sea-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-cinnamon-rolls.jpg
-- name: aws-s3-stories-new-75-125-800-500-0-max-0-1-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-75-125-800-500-0-max-0-1-1.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-clean-view.jpg
-- name: server-cloud-server-racks-clouds-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-feed-people.jpg
-- name: white-house-lawn-white-house-lawn-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-light-dali.jpg
-- name: locked-up-steam-lock-up-steam-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-constitution.jpg
-- name: old-door-lock-old-door-lock-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-granite.jpg
-- name: nazi-invasion-looking-down-over-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-looking-down-over-city.jpg
-- name: ellis-island-ellisisland-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-aqua.jpg
-- name: beach-clouds-lifeguard-beachclouds-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-matrix.jpg
-- name: gears-4882162452-fa3126b38d-b-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-monet-one.jpg
-- name: san-francisco-street-view-san-francisco-street-view-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-graham-sutherland.jpg
-- name: razorcliff-razorcliff-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-ww2-color.jpg
-- name: trucksilo-trucksilo-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-marcel-duchamp.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit.jpg
-- name: bluelake-far-away-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-far-away-file-00-00-00-00.jpg
-- name: stories-catacombs-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-catacombs-copper-circuit-2.jpg
-- name: stalin-time-old-comuter-wheels-crypto.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-comuter-wheels-crypto.jpg
-- name: mistywoods-babyfoot-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-sand-paper.jpg
-- name: hollywood-building-hollywood-building-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-free-woman.jpg
-- name: art-museum-art-museum-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-copper-circuit-2.jpg
-- name: adam-smith-adam-smith-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-cinnamon-rolls.jpg
+- name: oldcabin-oldcabin-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-colored-circuits.jpg
+- name: braceros-domingo-ulloa-downtown-la_36349151230_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-downtown-la_36349151230_o.jpg
+- name: white-house-lawn-white-house-window-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-hot-spicy.jpg
+- name: aws-s3-stories-vancouver-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-light-dali.jpg
+- name: downtown-los-angeles-downtown-la-crabapple.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-crabapple.JPG
+- name: hollywood-building-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-jap-wav-pr.jpg
+- name: liberty-back-statue-liberty-back-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-satan-red.jpg
+- name: liberty-back-statue-liberty-back-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-yellow-paper.jpg
+- name: capital-battle-capitolbattle-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purp-paper.jpg
+- name: trucksilo-trucksilo-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-yellow-collage.jpg
+- name: school-clouds-church-clouds-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-oily-mcoilface.jpg
+- name: old-door-lock-old-door-lock-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-far-away.jpg
+- name: oldhotel-oldhotel-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-really-hot.jpg
+- name: white-house-lawn-white-house-window-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-ww2-color.jpg
+- name: eduardo-eduardo-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-emily-carr.jpg
+- name: copper-circuit-sheep-grazing-grass-green.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-sheep-grazing-grass-green.jpg
+- name: oldhouse-granaryfield-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-gred-mash.jpg
+- name: old-granary-field-oldhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colored-circuits.jpg
+- name: downtheline-downtheline-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dali-three.jpg
+- name: gears-4882162452-fa3126b38d-b-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-colored-circuits.jpg
+- name: braceros-domingo-ulloa-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-capital-records-building.jpg
+- name: power-lines-power-lines-empty-space-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-light-dali.jpg
+- name: mediterranean-mediterranean-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-space-pizza.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit-5.jpg
+- name: white-house-lawn-white-house-window-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-purple-pond.jpg
+- name: gypsy-wagon-gypsywagon-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-yellow-paper.jpg
+- name: abe-lincoln-one-really-hot-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-really-hot-file-00-00-07-91.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
+- name: flower-barbed-wire-flower-barbed-wire-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-smooth-ride.jpg
+- name: meadowbutterfly-meadow-butterfly-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-crunch-paper.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-crunch-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-crunch-paper.png
+- name: copper-circuit-DSC_0072.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0072.jpg
+- name: locked-up-steam-lock-up-steam-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-oily-mcoilface.jpg
+- name: paris-paris-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-hot-spicy.jpg
+- name: old-door-lock-old-door-lock-2-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colorful-dream.jpg
+- name: christianity-christianity-under-construction-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-nazi-poster.jpg
+- name: statue-of-liberty-front-view-statueofliberty-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-yellow-paper.jpg
+- name: gears-4882162452-fa3126b38d-b-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-mucha-mult.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
+- name: flower-barbed-wire-flower-barbed-wire-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-alberto-giacometti.jpg
+- name: nazi-invasion-stainless-tree-sun-ray.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-stainless-tree-sun-ray.jpg
+- name: nazi-invasion-white-house-lawn-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-lawn-view.jpg
+- name: subway-subway-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-spagetti-accident.jpg
+- name: container-ship-van-gogh-van-gogh-starry-night-container-bridge-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/container-ship-van-gogh-van-gogh-starry-night-container-bridge-2.jpg
+- name: lincoln-memorial-lincolnmemorial-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-smooth-ride.jpg
+- name: status-berlin-status-berlin-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-matrix.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-yellow-paper.jpg
+- name: soldier-kneeling-26307870940-76a7c658cd-k.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26307870940-76a7c658cd-k.jpg
+- name: nazi-invasion-old-man-crossing-border.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-man-crossing-border.jpg
+- name: adam-smith-adam-smith-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-atari-missle.jpg
+- name: old-barn-old-barn-1500-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-bright-sand.jpg
 ---
 Sports Editor Apologizes For Tweeting 'scalps' After Game.&nbsp;Zabiegi Na Cellulit Wojkowice.&nbsp;Gather Receipts For Motor Fuel Income Tax Credit.&nbsp;Better Balance For Every Day.&nbsp;Annual Point In Time Homeless Count.&nbsp;Boys In The Band Tribute Concert Raises Funds For Local Causes.&nbsp;Late Antlerless Deer Season Extended For Residents In Two Areas.&nbsp;Blackhawks Rally To Beat Blue Jackets In Shootout.&nbsp;
